--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
 -----------------------------------------------------------------------------------*/
 
 
-header { direction: rtl; }
+html {
+    direction: ltr !important;
+}
 
 dl, dt, dd, ol, ul, li {
 	margin: 0;
@@ -889,7 +891,7 @@ body.stretched #header.full-header .container {
 
 #logo {
 	position: relative;
-	float: left;
+	float: right;
 	font-family: 'Raleway', sans-serif;
 	font-size: 36px;
 	line-height: 100%;
@@ -962,7 +964,7 @@ body.stretched #header.full-header .container {
 
 
 #primary-menu {
-	float: right;
+	float: left;
 	height: 100px;
 }
 
